@@ -33,6 +33,8 @@ $map['categories'] = "Kategorien";
 $map['company'] = "Firma";
 $map['department'] = "Abteilung";
 $map['email_address'] = "E-Mail-Adresse";
+$map['email_2_address'] = "E-Mail 2: Adresse";
+$map['email_3_address'] = "E-Mail 3: Adresse";
 $map['first_name'] = "Vorname";
 $map['gender'] = "Geschlecht";
 $map['home_city'] = "Ort privat";
