@@ -40,6 +40,8 @@ $map['categories'] = "Categories";
 $map['company'] = "Company";
 $map['department'] = "Department";
 $map['email_address'] = "E-mail Address";
+$map['email_2_address'] = "E-mail 2 Address";
+$map['email_3_address'] = "E-mail 3 Address";
 $map['first_name'] = "First Name";
 $map['gender'] = "Gender";
 $map['home_city'] = "Home City";
